// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render categorical legend with breaks from custom 1`] = `""`;

exports[`Should render categorical legend with breaks from default 1`] = `
<div>
  <EuiSpacer
    size="s"
  />
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <Category
      color="#54B399"
      isLinesOnly={false}
      isPointsOnly={true}
      key="US"
      label="US_format"
      styleName="lineColor"
    />
    <Category
      color="#6092C0"
      isLinesOnly={false}
      isPointsOnly={true}
      key="CN"
      label="CN_format"
      styleName="lineColor"
    />
    <Category
      color="#D36086"
      isLinesOnly={false}
      isPointsOnly={true}
      key="fallbackCategory"
      label={
        <EuiTextColor
          color="secondary"
        >
          Other
        </EuiTextColor>
      }
      styleName="lineColor"
    />
  </EuiFlexGroup>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceAround"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`Should render ordinal legend 1`] = `
<div>
  <EuiSpacer
    size="s"
  />
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <Category
      color="#f7faff"
      isLinesOnly={false}
      isPointsOnly={true}
      key="0"
      label="0_format"
      styleName="lineColor"
    />
    <Category
      color="#cfe1f2"
      isLinesOnly={false}
      isPointsOnly={true}
      key="20"
      label="20_format"
      styleName="lineColor"
    />
    <Category
      color="#93c4de"
      isLinesOnly={false}
      isPointsOnly={true}
      key="40"
      label="40_format"
      styleName="lineColor"
    />
    <Category
      color="#4a97c9"
      isLinesOnly={false}
      isPointsOnly={true}
      key="60"
      label="60_format"
      styleName="lineColor"
    />
    <Category
      color="#072f6b"
      isLinesOnly={false}
      isPointsOnly={true}
      key="80"
      label="80_format"
      styleName="lineColor"
    />
  </EuiFlexGroup>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceAround"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`Should render ordinal legend with breaks 1`] = `
<div>
  <EuiSpacer
    size="s"
  />
  <EuiFlexGroup
    direction="column"
    gutterSize="none"
  >
    <Category
      color="#FF0000"
      isLinesOnly={false}
      isPointsOnly={true}
      key="0"
      label="0_format"
      styleName="lineColor"
    />
    <Category
      color="#00FF00"
      isLinesOnly={false}
      isPointsOnly={true}
      key="10"
      label="10_format"
      styleName="lineColor"
    />
  </EuiFlexGroup>
  <EuiFlexGroup
    gutterSize="xs"
    justifyContent="spaceAround"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiToolTip
        content="foobar_label"
        delay="regular"
        position="top"
        title="Border color"
      >
        <EuiText
          className="eui-textTruncate"
          size="xs"
          style={
            Object {
              "maxWidth": "180px",
            }
          }
        >
          <small>
            <strong>
              foobar_label
            </strong>
          </small>
        </EuiText>
      </EuiToolTip>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;
